--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "homepage": "https://github.com/Titusvimalraj/nodeExpressApplicationURLShortener#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "shortid": "^2.2.15"
   }
